--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>Welcome to Our Stylish Website</h1>
     </header>
     <div class="container">
-        <h2>About Us</h2>
-        <p>This is a simple and stylish website template. You can customize it to create your unique website.</p>
-        <a class="btn" href="#">Learn More</a>
+        <img src="lebron-james.jpg" alt="LeBron James" class="lebron-image">
+        <h2>About LeBron James</h2>
+        <p>LeBron Raymone James Sr. is an American professional basketball player widely regarded as one of the greatest basketball players of all time. Born on December 30, 1984, in Akron, Ohio, LeBron has had a remarkable career in the NBA, playing for teams such as the Cleveland Cavaliers, Miami Heat, and currently, the Los Angeles Lakers. Known for his incredible athleticism, basketball IQ, and versatility, LeBron has won multiple NBA championships and MVP awards throughout his illustrious career.</p>
     </div>
     <footer>
         &copy; 2023 Stylish Website
